# hf-bert-cola-mlops

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: lint.yml
src/: data.py  model.py  train.py
