[project]
name = "lighting-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "intisar",email = "intisarcs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytorch-lightning (>=2.2.2,<3.0.0)",
    "datasets (>=2.19.1,<3.0.0)",
    "transformers (>=4.41.2,<5.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "wandb (>=0.20.1,<0.21.0)"
]

[tool.poetry]
packages = [{include = "lighting_mlops", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
